--- a/logdna-agent/Dockerfile
+++ b/logdna-agent/Dockerfile
@@ -1,9 +1,9 @@
-FROM mhart/alpine-node:13
+FROM node:13-alpine
 CMD ["node", "/src/index.js"]
 WORKDIR /src
 
 # Only run yarn when we need to do so.
 COPY package.json ./
-RUN yarn
+RUN yarn --production
 
 COPY . .
