--- a/images.yaml
+++ b/images.yaml
@@ -1,22 +1,27 @@
 images:
   # All repos must be in the form of their import paths.
   external-attacher:
+    language: go
     name: csi-attacher
     version: v2.1.0
     repo: github.com/kubernetes-csi/external-attacher
   external-snapshotter:
+    language: go
     name: csi-snapshotter
     version: v1.2.2
     repo: github.com/kubernetes-csi/external-snapshotter
   external-resizer:
+    language: go
     name: csi-resizer
     version: v0.4.0
     repo: github.com/kubernetes-csi/external-resizer
   node-driver-registrar:
+    language: go
     name: csi-node-driver-registrar
     version: v1.2.0
     repo: github.com/kubernetes-csi/node-driver-registrar
   ceph-csi:
+    language: go
     name: cephcsi
     version: v2.1.0
     repo: github.com/ceph/ceph-csi
@@ -24,3 +29,9 @@ images:
     name: logdna-agent
     version: 1.6.2:v1.6.2-jaredallard.1
     repo: github.com/logdna/logdna-agent
+  flannel:
+    # We're using glide.
+    #language: go
+    name: flannel
+    version: v0.12.0
+    repo: github.com/coreos/flannel
